<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.unibook.SettingsActivity" >

    <EditText
        android:id="@+id/txt_settings_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/first_name"
        >

        
    </EditText>

    <EditText
        android:id="@+id/txt_settings_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_settings_first_name"
        android:layout_below="@+id/txt_settings_first_name"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/last_name"
         />

    <EditText
        android:id="@+id/txt_settings_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_submit_settings"
        android:layout_below="@+id/txt_settings_last_name"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/location"
         />

    <Button
        android:id="@+id/btn_submit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_settings_last_name"
        android:layout_below="@+id/txt_settings_location"
        android:layout_marginTop="91dp"
        android:onClick="profile"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/txt_settings_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_settings_location"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

</RelativeLayout>