<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.unibook.CreateEventActivity" >

    <EditText
        android:id="@+id/txt_create_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/event_name" >
        
    </EditText>

    <EditText
        android:id="@+id/txt_create_event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_create_event_name"
        android:layout_below="@+id/txt_create_event_name"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/event_description" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_create_event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_create_event_description"
        android:layout_below="@+id/txt_create_event_description"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/event_location" />

    <EditText
        android:id="@+id/txt_create_event_imageurl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_create_event_location"
        android:layout_below="@+id/txt_create_event_location"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/image_url" />

    <Button
        android:id="@+id/btn_create_event_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_create_event_imageurl"
        android:layout_below="@+id/txt_create_event_imageurl"
        android:layout_marginTop="42dp"
        android:text="@string/submit" />

</RelativeLayout>