<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.unibook.EventsActivity" >

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
         />

    <TextView
        android:id="@+id/event_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event_location"
        android:layout_below="@+id/event_location"
        android:layout_marginTop="22dp"
         />

    <TextView
        android:id="@+id/event_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event_name"
        android:layout_below="@+id/event_name"
        android:layout_marginTop="20dp"
         />

    <TextView
        android:id="@+id/event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event_time"
        android:layout_below="@+id/event_time"
        android:layout_marginTop="24dp"
        />

    <EditText
        android:id="@+id/event_post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event_description"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/event_hint_post"
        android:inputType="textLongMessage" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/event_post_button"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/event_post_text"
        android:layout_marginStart="37dp"
        android:layout_toEndOf="@+id/event_description"
        android:onClick="onClick"
        android:text="@string/button_event_post"
        android:textColor="@color/blue" />

    <Button
        android:id="@+id/view_posts"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:onClick="viewPosts"
        android:text="@string/view_posts"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />

</RelativeLayout>